--- a/style.css
+++ b/style.css
@@ -89,3 +89,13 @@ a {
     top: 8px;
     right: 16px;
 }
+.score{
+    background-color: var(--darkpurple);
+        color: white;
+        padding: 15px 20px;
+        font-size: 16px;
+        border-radius: 12px;
+    }
+    .score:hover{
+        background-color:var(--lightpurple);
+    }
